add endpoint to get keys for conditions
